animated-banner{display;none

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="de"><head>
+<!DOCTYPE html>
+<html lang="de"><head>
 <!-- ENCODE --><meta charset="utf-8">
 <!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- SUPPORT --><meta http-equiv="X-UA-Compatible" content="IE=edge">
