--- a/mjsecurity/index.html
+++ b/mjsecurity/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="de"><head>
+<!DOCTYPE html>
+<html lang="de"><head>
 <!-- ENCODE --><meta charset="utf-8">
 <!-- OPTIMIZE --><meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- SUPPORT --><meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +52,7 @@
 <div class="grid-container">
 <!-- HELLO WORLD -->
 <article class="content flow" id="this_hello_world">
-<h1>print("<b class="pink glow-font">hello world</b>")</h1>
+<h1>print("<b class="gtc3v2">hello world</b>")</h1>
 <div class="catchem this_page-intro">
 <h4>wtf is <span class="domain-font">jumi.biz</span> ?</h4>
 <p>Kompakte Inhalte über
@@ -63,14 +64,14 @@
 <b class="m">Tools</b> und
 <b class="o">Off-Topics.</b>
 Text&nbsp;minimalisiert, fragmentiert und visuell ergonomisiert.
-<span class="more-text">...btw sry i love glowing lights &#9786;</span></p>
+<span class="more-text"><br>...btw brauche RAM für <i class="glow-font">"ଘ(੭*ˊᵕˋ)੭*☆ﾟ.</i><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></span>
 <h3>...so what?</h3>
 <p>Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
-davon verbleibt nach einem Tag vermutlich ~50%,
-nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</p>
+davon verbleibt nach einem Tag vermutlich ~50%,</p>
 <b>Beispiel A</b><aside class="more-text">Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside class="more-text">Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
+<div class="catchem flex">
 <table id="table_01">
 <caption>minimaler Text(B) = 23% merkbarer</caption>
     <thead>
@@ -84,7 +85,7 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </thead>
     <tbody>
         <tr>
-        <td><span><b>A</b></span></td>
+        <td><span>A</span></td>
         <td><span>13</span></td>
         <td><span>10</span></td>
         <td><span>6</span></td>
@@ -98,27 +99,15 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
         <td><span><b>83%</b></span></td>
         </tr>
     </tbody>
-</table></div>
-<!-- HISTORY,TO-DO,BUTTONS -->
-<div class="catchem flex" id="this_milestones">
-<h3>Milestones</h3>
-<aside><h4>$ history</h4><ul>
-    <li>[19-06] Domain gemietet</li>
-    <li>[20/21] Konzeptentwicklung</li>
-    <li>[22-11] Ausarbeitung</li>
-    <li>[23-03] Designentwicklung</li>
-    <li>[23-08] Github-Anbindung</li>
-    <li>[23-10] Integration</li></ul></aside>
-<aside><h4>To-Do</h4><ul>
-    <li>[23-11] Edits/Content</li>
-    <li>[23-11] Instagram Content</li>
-    <li>[23-12] JavaScript AddOns</li>
-    <li>[24-01] PHP-Implement</li>
-    <li>[24-01] Quiz-Feature</li>
-    <li>[24-01] Themes-Feature</li></ul></aside>
+</table>
 </div>
+</div>
+<hr><br>
+<details>
+<summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
+<br><span class="quiz-answers">A keyboard</span>
+</details>
 <div class="catchem flex">
-<h3>Navigation ohne Maus möglich</h3>
 <table id="table_02">
 <caption>Tasten-Steuerung</caption>
     <thead>
@@ -137,7 +126,34 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
         <td><span>Enter</span></td>
         </tr>
     </tbody>
-</table></div>
+</table>
+</div>
+<aside class="more-text zitiert" id="navigieren-Sie">Sie Navigieren ganz bequem und schonen Ihren Arm für andere Aktivitäten!</aside>
+<hr><br>
+<h2><span class="pink domain-font">jumi.biz</span> Seit 2019</h2>
+<!-- HISTORY,TO-DO,BUTTONS -->
+<div class="catchem flex" id="this_milestones">
+<aside>
+<h4>$ history</h4>
+<ul>
+  <li>[19-06] Domain gemietet</li>
+  <li>[20/21] Konzeptentwicklung</li>
+  <li>[22-11] Ausarbeitung</li>
+  <li>[23-03] Designentwicklung</li>
+  <li>[23-08] Github-Anbindung</li>
+  <li>[23-10] Integration</li>
+</ul></aside>
+<aside>
+<h4>To-Do</h4>
+<ul>
+  <li>[23-11] Edits/Content</li>
+  <li>[23-11] Instagram Content</li>
+  <li>[23-12] JavaScript AddOns</li>
+  <li>[24-01] PHP-Implement</li>
+  <li>[24-01] Quiz-Feature</li>
+  <li>[24-01] Themes-Feature</li>
+</ul></aside>
+</div>
 </article>
 <article class="content flow" id="this_whoami">
 <h2>&#36; whoami</h2>
@@ -178,15 +194,15 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 </div>
 <br>
 <!-- ABOUT_ME -->
-    <div class="catchem this_too_deep"><h3>Admin, User, Gamer, Distro-Hopper, Human-Designer</h3><p>Mich interessiert das&nbsp;Verborgene. Bin&nbsp;ich Licht, Frequenz oder Vibration? Ist alles eine Simulation? Neugier&nbsp;will leben, will&nbsp;<b class="b">Wasser</b> zum Trinken, will&nbsp;<b class="y">Luft</b> zum&nbsp;Atmen. Bitter&nbsp;endet, das letzte Geheimnis, das im&nbsp;Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie <b class="o">feinste Erde</b> im <b>Wind</b>.</p>
-    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des&nbsp;Was. Und&nbsp;was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside></div>
+    <div class="catchem this_too_deep"><h3>Admin, User, Gamer, Distro-Hopper, Human-Designer</h3><p>Mich interessiert das Verborgene. Bin ich Licht, Frequenz oder Vibration? Ist alles eine Simulation? Neugier will leben, will <b class="b">Wasser</b> zum Trinken, will <b class="y">Luft</b> zum Atmen. Bitter endet, das letzte Geheimnis, das im Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit im <b class="g">Rauch</b> des <b class="r">Feuers</b> versteckt, unfassbar wie feinste  <b class="o">Erde</b> im <b>Wind</b>.</p>
+    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside></div>
 </article>
 <article class="content flow">
 <!-- INFO,STATEMENT -->
 <h4>Dark Mode Only</h4>
-    <div class="catchem this_personal_statement"><p>Ein dunkler Bildschirm spart bis zu <b>60%</b> Energie und schont die&nbsp;Augen.
-    Wenn&nbsp;du den hellen Modus immer noch bevorzugst dann&nbsp;GTFO!</p>
-    <aside class="more-text zitiert"><q>Come with me. It&nbsp;is the&nbsp;only&nbsp;way.</q><br>
+    <div class="catchem this_personal_statement"><p>Ein dunkler Bildschirm spart bis zu <b>60%</b> Energie und schont die Augen.
+    Wenn du den hellen Modus immer noch bevorzugst dann GTFO!</p>
+    <aside class="more-text zitiert"><q>Come with me. It is the only way.</q><br>
     <cite>- Darth Vader (1980)</cite></aside></div>
 </article>
 <article class="content flow">
@@ -198,43 +214,45 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     <aside class="more-text zitiert"><q>Der Meister erscheint wenn der Schüler bereit&nbsp;ist.</q><br>
     <cite>- Karate Tiger (1986)</cite></aside></div>
 </article>
-<article class="content flow" id="site-topics">
-<h4>Linux </h4>
+<article class="content flow" id="table_01">
+<aside>
+<h2>Linux </h2>
   <ul>
     <li><a href="pages/template.htm">Dateisystem</a></li>
     <li><a href="pages/template.htm">Konfiguration</a></li>
     <li><a href="pages/template.htm">Good-Practice</a></li>
   </ul>
-<h4>Windows </h4>
+<h2>Windows </h2>
   <ul>
     <li><a href="pages/template.htm">DC/AD-Server-2019</a></li>
     <li><a href="pages/template.htm">Firewall</a></li>
     <li><a href="pages/template.htm">Pentesting</a></li>
   </ul>
-<h4>Infosec </h4>
+<h2>Infosec </h2>
   <ul>
     <li><a href="pages/IT-Sicherheit.htm">IT-Grundschutz </a></li>
     <li><a href="pages/Projektmanagement.htm">Projektmanagement </a></li>
     <li><a href="pages/Qualitätssicherung.htm">Qualitätssicherung </a></li>
   </ul>
-<h4>Coding </h4>
+<h2>Coding </h2>
   <ul>
     <li><a href="pages/template.htm">HTML,CSS,PHP</a></li>
     <li><a href="pages/template.htm">Bash,Python</a></li>
     <li><a href="pages/template.htm">Cmdlets</a></li>
   </ul>
-<h4>Shell </h4>
+<h2>Shell </h2>
   <ul>
     <li><a href="pages/template.htm">LinuxShell</a></li>
     <li><a href="pages/template.htm">Powershell</a></li>
     <li><a href="pages/template.htm">Networking</a></li>
   </ul>
-<h4>Tools </h4>
+<h2>Tools </h2>
   <ul>
     <li><a href="pages/template.htm">Forensic</a></li>
     <li><a href="pages/template.htm">Monitoring</a></li>
     <li><a href="pages/template.htm">Hacking</a></li>
   </ul>
+</aside>
 <aside class="more-text zitiert">
 <q>If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.</q><br>
 <cite>- Nikola Tesla (1856-1943)</cite></aside>
