--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@ body {
 <b class="b">Infosec</b>
 <b class="y">Coding</b> 
 <b class="c">Shell</b> 
-<b class="m">Tools</b>, kompakt.
-<br>Und <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
+<b class="m">Tools</b>.
+Und <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
 <h3>In Theorie</h3>
-<p>Gewöhnlicher Text hat <b>~25%</b> relevanten Kerninhalt,
-davon verbleibt nach einem Tag vermutlich ~50%,
-nach zwei Tagen <b>~30%</b> im Gedächtnis. Ergibt <b>~7,5%</b> Text.</p>
+<p>Wenn Text zu <b>25%</b> aus relevanten Kerninhalt besteht,
+der nach einem Tag zu 50%, nach zwei Tagen zu <b>30%</b> im Gedächtnis verbleibt,
+Dann ergibt das <b>7,5%</b> Textinhalt mit langfristiger Einprägung.</p>
 <b>Beispiel A</b><aside class="more-text">Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside class="more-text">Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
 <div class="catchem">
 <table id="table_01">
-<caption>Text B ist 23% leichter zu merken</caption>
+<caption>Text B ist ~23% leichter zu merken</caption>
     <thead>
         <tr>
         <th>Text</th>
@@ -201,10 +201,10 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </tbody>
 </table>
 </div>
-<p>Schnelle Interpretation visueller Information durch ergonomisches Darstellungs-Konzept.</p>
+<p>Ergonomisches Darstellungs-Konzept zur leichteren Interpretation visueller Information.</p>
 <div id="desktop-only">
-<h3>Tastensteuerung</h3>
-<p class="keyboard-buttons">Unterstützung schneller Navigation per Tasten. Blaue Elemente oder Bilder mit <span>TAB</span> selektiert und mit <span>Enter</span> oder <span>Leer</span> öffnen.</p>
+<h3>Optionale Tastensteuerung</h3>
+<p class="keyboard-buttons">Unterstützung einer schnellen Navigation. Blaue Elemente oder Bilder mit <span>TAB</span> selektiert und mit <span>Enter</span> oder <span>Leer</span> öffnen, ohne Maus.</p>
 <details>
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
 <span class="quiz-answer">A keyboard</span>
@@ -228,7 +228,33 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </tbody>
 </table>
 </aside>
-<aside class="more-text zitiert">Navigation ganz ohne Maus möglich!</aside>
+</details>
+<details>
+<summary>Zitat aus Mr. Robot Episode 8 Staffel 1, über Kontrolle ?</summary>
+<aside class="np more-text zitiert quiz-answer"><q>Control can sometimes be an illusion. But sometimes you need illusion to gain control.</q><br>
+    <cite>- Elliot Alderson</cite></aside>
+<aside class="catchem flex">
+<table id="table_02">
+    <thead>
+        <tr>
+        <th>Scrollen</th>
+        <th>Springen</th>
+        <th>Vor / Zurück</th>
+        <th>Neu laden</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr class="keyboard-buttons">
+        <td><span>Bild&uarr;</span> <span>Bild&darr;</span></td>
+        <td><span>POS1</span> <span>ENDE</span></td>
+        <td><span>ALT</span> &#43; <span>&larr;</span> <span>&rarr;</span></td>
+        <td><span>F5</span></td>
+        </tr>
+    </tbody>
+</table>
+</aside>
+<h4>Maximaler Fokus durch weniger Bewegung!</h4>
+<p class="np">(☞ ͡° ͜ʖ ͡°)☞ <b class="gtc3">𝓳𝓾𝓶𝓲.𝓫𝓲𝔃</b> ¯\_(ツ)_</p>
 </details>
 </div>
 </div>
@@ -307,7 +333,7 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <br>
 <!-- ABOUT_ME -->
     <div class="catchem this_too_deep"><h3>Admin, User, Gamer, Hikikomori</h3>
-    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside><p>Sich selbst, das Universum, unwissend. Bin ich Licht, Frequenz oder Vibration? Alles simuliert? Gottes Körper, den er nur spürt und bewegt. Ist Neugier das Leben, will <b class="b">Wasser</b> zum Trinken, will <b class="y">Luft</b> zum Atmen. Bitter, das letzte Geheimnis, das im Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit unfassbar im Rauch des <b class="r">Feuers</b> versteckt, und sind nur schweigende Zeugen aus <b class="o">Erde</b>, verweht im <b>Wind</b>. Paarweise zu je 5 Elementen, flüsterts 3 6 9 und bewegt durch 1/137.</p>
+    <aside class="more-text zitiert">Wer? Wer ist nur die Form als Konsequenz der Funktion des Was. Und was ich bin, das ist ein Mann mit Maske.<br><cite>- V wie Vendetta (2005)</cite></aside><p>Unwissend, wie das Universum selbst. Bin ich Licht, Frequenz Vibration? Simulation? Ist Neugier der Sinn? Ist es <b class="b">Wasser</b> zu trinken und <b class="y">Luft</b> zu atmen? Wohin führt das letzte Geheimnis, das im Tausch, wieder verborgen zurückkehrt. Dessen Wahrheit unfassbar im Rauch des <b class="r">Feuers</b> versteckt, und nur schweigende Zeugen aus <b class="o">Erde</b>, verweht im <b>Wind</b>. Zu Sein um zu Suchen, bewegt von 1 durch 2 mal 2 Teile mit jeweils 5 Elementen, erschaffen 3 6 9 und kommunizieren 1/137.</p>
 <aside class="more-text zitiert">
 <q>If you want to find the secrets of the universe, think in terms of energy, frequency and vibration.</q><br>
 <cite>- Nikola Tesla (1856-1943)</cite></aside></div>
