--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@ body {
 <b class="b">Infosec</b>
 <b class="y">Coding</b> 
 <b class="c">Shell</b> 
-<b class="m">Tools</b>.
-Und <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
+<b class="m">Tools</b> &
+<b class="o">Human-Design</b>.</p>
 <h3>In Theorie</h3>
 <p>Wenn Text zu <b>25%</b> aus relevanten Kerninhalt besteht,
 der nach einem Tag zu 50%, nach zwei Tagen zu <b>30%</b> im Gedächtnis verbleibt,
-Dann ergibt das <b>7,5%</b> Textinhalt mit langfristiger Einprägung.</p>
+ergibt das <b>7,5%</b> Textinhalt mit langfristiger Einprägung.</p>
 <b>Beispiel A</b><aside class="more-text">Zwanzig Zwerge machen Handstand,
 zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
 <b>Beispiel B</b><aside class="more-text">Zwergenhandstände,Ort: 10,Schrank&nbsp;10,Strand</aside>
@@ -201,7 +201,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </tbody>
 </table>
 </div>
-<p>Ergonomisches Darstellungs-Konzept zur leichteren Interpretation visueller Information.</p>
+<p>Ergonomisches Darstellungs-Konzept zur leichteren Interpretation visueller Information.<br>
+Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i></span><b class="gtc3">*･｡ﾟᴸᵉᵘᶜʰᵗᵉᶠᶠᵉᵏᵗᵉ</b></p>
 <div id="desktop-only">
 <h3>Optionale Tastensteuerung</h3>
 <p class="keyboard-buttons">Unterstützung einer schnellen Navigation. Blaue Elemente oder Bilder mit <span>TAB</span> selektiert und mit <span>Enter</span> oder <span>Leer</span> öffnen, ohne Maus.</p>
@@ -228,6 +229,8 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </tbody>
 </table>
 </aside>
+<h4>Maximaler Fokus durch weniger Bewegung!</h4>
+<p class="np">(☞ ͡° ͜ʖ ͡°)☞ <b class="gtc3">𝓳𝓾𝓶𝓲.𝓫𝓲𝔃</b> ¯\_(ツ)_</p>
 </details>
 <details>
 <summary>Zitat aus Mr. Robot Episode 8 Staffel 1, über Kontrolle ?</summary>
@@ -253,22 +256,82 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     </tbody>
 </table>
 </aside>
-<h4>Maximaler Fokus durch weniger Bewegung!</h4>
-<p class="np">(☞ ͡° ͜ʖ ͡°)☞ <b class="gtc3">𝓳𝓾𝓶𝓲.𝓫𝓲𝔃</b> ¯\_(ツ)_</p>
 </details>
 </div>
 </div>
 </article>
 <article class="content flow">
-<!-- INFO,STATEMENT -->
-<h4>Dark Mode Only</h4>
-    <div class="catchem this_personal_statement"><p>Ein dunkler Bildschirm spart bis zu <b>60%</b> Energie und schont die Augen.
-    Wenn du den hellen Modus immer noch bevorzugst dann GTFO!</p>
-    <aside class="more-text zitiert"><q>Come with me. It is the only way.</q><br>
-    <cite>- Darth Vader (1980)</cite></aside></div>
+<h2>Links</h2>
+<div id="topics">
+  <ul>
+<h4>Linux</h4>
+    <li><a href="pages/template.htm">Distribution</a></li>
+    <li><a href="pages/template.htm">Konfiguration</a></li>
+    <li><a href="pages/template.htm">Hardening</a></li>
+    <li><a href="pages/template.htm">Active-Directory</a></li>
+    <li><a href="pages/template.htm">Firewall</a></li>
+    <li><a href="pages/template.htm">Pentesting</a></li>
+  </ul>
+  <ul>
+<h4>IT-Grundschutz</h4>
+    <li><a href="pages/template.htm">Standards</a></li>
+    <li><a href="pages/template.htm">Maßnahmen</a></li>
+    <li><a href="pages/template.htm">Management</a></li>
+    <li><a href="pages/template.htm">Forensic</a></li>
+    <li><a href="pages/template.htm">Monitoring</a></li>
+    <li><a href="pages/template.htm">Virenschutz</a></li>
+  </ul>
+  <ul>
+<h4>Shell</h4>
+    <li><a href="pages/template.htm">LinuxShell</a></li>
+    <li><a href="pages/template.htm">Powershell</a></li>
+    <li><a href="pages/template.htm">Networking</a></li>
+    <li><a href="pages/template.htm">Bash</a></li>
+    <li><a href="pages/template.htm">Python</a></li>
+    <li><a href="pages/template.htm">Cmdlets</a></li>
+  </ul>
+</div>
 </article>
 <article class="content flow">
-
+<h2>Human Design</h2>
+<div id="topics">
+  <ul>
+<h4>Grundlagen</h4>
+    <li><a href="pages/template.htm">Ra Uru Hu</a></li>
+    <li><a href="pages/template.htm">64 Hexagramme</a></li>
+    <li><a href="pages/template.htm">Planetenpositionen</a></li>
+    <li><a href="pages/template.htm">Energetische Signatur</a></li>
+    <li><a href="pages/template.htm">Bodygraph</a></li>
+    <li><a href="pages/template.htm">Die Sephiroth</a></li>
+  </ul>
+  <ul>
+<h4>Elemente</h4>
+    <li><a href="pages/template.htm">Astrologie</a></li>
+    <li><a href="pages/template.htm">I Ging</a></li>
+    <li><a href="pages/template.htm">Kabbala</a></li>
+    <li><a href="pages/template.htm">Chakren</a></li>
+  </ul>
+  <ul>
+<h4>Strategien</h4>
+    <li><a href="pages/template.htm">Generator</a></li>
+    <li><a href="pages/template.htm">Projektor</a></li>
+    <li><a href="pages/template.htm">Manifestor</a></li>
+    <li><a href="pages/template.htm">Reflektor</a></li>
+    <li><a href="pages/template.htm">Selbstprojektor</a></li>
+    <li><a href="pages/template.htm">Selbstreflektor</a></li>
+  </ul>
+  <ul>
+<h4>Profile</h4>
+    <li><a href="pages/template.htm">Mannifester Generator</a></li>
+    <li><a href="pages/template.htm">Mannifester Projektor</a></li>
+    <li><a href="pages/template.htm">Mannifester Reflektor</a></li>
+    <li><a href="pages/template.htm">Randalierender generator</a></li>
+    <li><a href="pages/template.htm">Randalierender Projektor</a></li>
+    <li><a href="pages/template.htm">Randalierender Reflektor</a></li>
+  </ul>
+  <ul>
+  </ul>
+</div>
 </article>
 <article class="content flow" id="this_whoami">
 <h2>About <span class="domain-font">jumi</span></h2>
@@ -390,6 +453,12 @@ zehn&nbsp;im&nbsp;Wandschrank, zehn am Sandstrand.</aside>
     <li><a href="pages/template.htm">Quiz-Game </a></li>
   </ul>
 </div>
+<div class="catchem this_personal_statement">
+<h3>Dark Mode Only</h3>
+<p>Ein dunkler Bildschirm spart bis zu <b>60%</b> Energie und schont die Augen.
+Wenn du den hellen Modus immer noch bevorzugst dann GTFO!</p>
+<aside class="more-text zitiert"><q>Come with me. It is the only way.</q><br>
+<cite>- Darth Vader (1980)</cite></aside></div>
 </article></div></main>
 
 <!-- ### Debugger: Auto-Refresh Page (-option)
