save state, do links content template

--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 <h4>Grundlagen</h4>
     <li><a href="pages/template.htm">Ra Uru Hu</a></li>
     <li><a href="pages/template.htm">64 Hexagramme</a></li>
-    <li><a href="pages/template.htm">Planetenpositionen</a></li>
+    <li><a href="pages/template.htm">Astrologie</a></li>
     <li><a href="pages/template.htm">Energetische Signatur</a></li>
     <li><a href="pages/template.htm">Bodygraph</a></li>
     <li><a href="pages/template.htm">Die Sephiroth</a></li>
   </ul>
   <ul>
 <h4>Elemente</h4>
-    <li><a href="pages/template.htm">Astrologie</a></li>
+    <li><a href="pages/template.htm">Planeten</a></li>
     <li><a href="pages/template.htm">I Ging</a></li>
     <li><a href="pages/template.htm">Kabbala</a></li>
     <li><a href="pages/template.htm">Chakren</a></li>
