updated "about jumi"

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 <p class="keyboard-buttons">Unterstützung einer schnellen Navigation. Blaue Elemente oder Bilder mit <span>TAB</span> selektiert und mit <span>Enter</span> oder <span>Leer</span> öffnen, ohne Maus.</p>
 <details>
 <summary>I have keys but no doors. I&nbsp;have space but no room. You&nbsp;can enter but can’t leave. What&nbsp;am&nbsp;I ?</summary>
-<span class="quiz-answer">A keyboard</span>
+<span class="quiz-answer">a keyboard</span>
 <aside class="catchem flex">
 <table id="table_02">
     <thead>
@@ -339,22 +339,22 @@ Mit <span class="more-text">ଘ(੭<i class="glow-font">*ˊᵕˋ)੭*☆ﾟ</i><
 <aside>
 <h2>$ history</h2>
 <ul>
-  <li>[19-06] Domain gemietet</li>
-  <li>[20/21] Konzeptentwicklung</li>
-  <li>[22-11] Ausarbeitung</li>
-  <li>[23-03] Designentwicklung</li>
-  <li>[23-08] Github-Anbindung</li>
-  <li>[23-10] Integration</li>
+  <li>[19-06]Domain_gemietet</li>
+  <li>[20/21]Konzepierung</li>
+  <li>[22-11]Ausarbeitung</li>
+  <li>[23-03]Design-Struktur</li>
+  <li>[23-08]Github-Anbindung</li>
+  <li>[23-10]Workflow-Struktur</li>
 </ul></aside>
 <aside>
 <h2>To-Do</h2>
 <ul>
-  <li>[23-11] Edits/Content</li>
-  <li>[23-11] Instagram Content</li>
-  <li>[23-12] JavaScript Addons</li>
-  <li>[24-01] PHP-Implement</li>
-  <li>[24-01] Quiz-Feature</li>
-  <li>[24-01] Themes-Feature</li>
+  <li>[23-11]Edits/Content</li>
+  <li>[23-11]Instagram-Content</li>
+  <li>[23-12]JavaScript-Addons</li>
+  <li>[24-01]PHP-Implement</li>
+  <li>[24-01]Quiz-Feature</li>
+  <li>[24-01]Themes-Feature</li>
 </ul></aside>
 </div>
 <h3>&#36; whoami</h3>
